Fix iOS introduction layout bug

--- a/src/components/css/Introduction.module.css
+++ b/src/components/css/Introduction.module.css
@@ -47,7 +47,7 @@
 
 .stepContent {
 	display: flex;
-	flex: 1;
+	flex: 1 0 auto;
 	flex-direction: column;
 	justify-content: space-between;
 }
